# full_rampage

./: .proto  README.md  copy-protos.sh  local-dev-setup.sh
backend/: Cargo.toml  build.rs
backend/protos/: messages.proto
backend/src/: backend.proto  lib.rs  main.rs
frontend/: .gitignore  index.html  messages.proto  package-lock.json  package.json  styles.css
frontend/src/: App.tsx  index.css  index.ts  script.ts  setup.ts
frontend/src/components/: GameWindow.tsx  Lobby.tsx  RampageVehicle.tsx  RespawningVehicle.tsx  Shot.tsx
frontend/src/types/: input.ts  player.ts  renderable.ts  responses.ts
frontend/src/utils/: drawFunctions.ts  helpers.ts
